--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+  	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
     <title>Bootstrap 101 Template</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
@@ -8,6 +9,9 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
+    	<p>vom Grundlagenkurs Web-Engineering<br>
+      	by rh</p>
+      	
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
