--- a/index.html
+++ b/index.html
@@ -2,24 +2,102 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-<title>Willkommen!</title>
+<link rel="stylesheet" type="text/css" href="index.css">
+<title>XHTML 1.0 strict Elements</title>
 </head>
 <body>
 <header>
-	<h1>Willkommen!</h1>
+	<h1>Tabelle aller "XHTML 1.0 strict"-Elemente</h1>
 </header>
-<article>
-	<p>
-		Diese Seite wird von Ihrem eigenen Webserver auf Ihrem eigenen Rechner unter der Top-Level-Domain
-		<a href="http://localhost">localhost</a> ausgeliefert.
-	</p>
-	<p>
-		Sie werden hier Ihre Website erstellen, auf der Sie auch ohne Internetzugang surfen können.
-		Erst wenn Sie mit Ihrer Arbeit zufrieden sind, geht's in die Cloud.
-	</p>
-	<p>
-		Ihr Kursteam
-	</p>
-</article>
+
+	<table>
+	  <thead>
+	    <tr>
+	      <th>Element Tag</th>
+	      <th>Elementbeschreibung</th>
+	      <th>Inline/Block</th>
+	      <th>semantisch</th>
+	    </tr>
+	  </thead>
+	  <tbody>
+			<tr><td class="tag">&lt;a&gt;</td><td class="beschreibung">Verweis (Hyperlink) und Anker für Verweise</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;abbr&gt;</td><td class="beschreibung">Abkürzung</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;acronym&gt;</td><td class="beschreibung">Akronym.</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;address&gt;</td><td class="beschreibung">Kontaktangabe zum Autor eines Inhalts (Credits)</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;area&gt;</td><td class="beschreibung">Verweis-sensitiver Bereich in einer Image-Map-Grafik</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;b&gt;</td><td class="beschreibung">Stilistische Hervorhebung im Text (üblicherweise fett dargestellt)</td><td>inline</td><td> ✗</td></tr>
+			<tr><td class="tag">&lt;base&gt;</td><td class="beschreibung">Basis-URL für Referenzen</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;bdo&gt;</td><td class="beschreibung">Richtungsänderung bei bidirektionalem Text</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;big&gt;</td><td class="beschreibung">Großschrift.</td><td>block</td><td> ✗</td></tr>
+			<tr><td class="tag">&lt;blockquote&gt;</td><td class="beschreibung">Zitat in Form eines eigenen Textabsatzes</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;body&gt;</td><td class="beschreibung">Inhaltsbereich eines HTML-Dokuments</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;br&gt;</td><td class="beschreibung">Erzwungener Zeilenumbruch an der betreffenden Stelle</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;button&gt;</td><td class="beschreibung">Schaltfläche in einem Formular</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;caption&gt;</td><td class="beschreibung">Tabellenüberschrift / -unterschrift</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;cite&gt;</td><td class="beschreibung">Zitat innerhalb eines Absatzes</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;code&gt;</td><td class="beschreibung">Quelltext-Auszug innerhalb eines Absatzes</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;col&gt;</td><td class="beschreibung">Tabellenspalte</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;colgroup&gt;</td><td class="beschreibung">Gruppe von Tabellenspalten</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;dd&gt;</td><td class="beschreibung">Definition, Beschreibung, detaillierter Inhalt zu einem dt-Element</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;del&gt;</td><td class="beschreibung">gelöschter Inhalt (Änderungsmarkierung)</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;dfn&gt;</td><td class="beschreibung">Definition innerhalb eines Absatzes</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;div&gt;</td><td class="beschreibung">Allgemeiner Bereich</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;dl&gt;</td><td class="beschreibung">Liste mit dt- und dd-Elementen, für Definitionslisten, Dialoge usw.</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;dt&gt;</td><td class="beschreibung">Zu definierender Ausdruck in einer Definitionsliste, Sprechername in einem Dialog usw.</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;em&gt;</td><td class="beschreibung">emphatischer Ausdruck innerhalb eines Absatzes (z.B. überspitzte Formulierung)</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;fieldset&gt;</td><td class="beschreibung">Gruppe von Elementen in einem Formular, Reiter in einem Dialog</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;form&gt;</td><td class="beschreibung">Formular, Dialog</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;h1&gt;</td><td class="beschreibung">Überschrift 1.  Ordnung</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;h2&gt;</td><td class="beschreibung">Überschrift 2. Ordnung</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;h3&gt;</td><td class="beschreibung">Überschrift 3. Ordnung</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;h4&gt;</td><td class="beschreibung">Überschrift 4. Ordnung</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;h5&gt;</td><td class="beschreibung">Überschrift 5. Ordnung</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;h6&gt;</td><td class="beschreibung">Überschrift 6. Ordnung</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;head&gt;</td><td class="beschreibung">Kopfbereich eines HTML-Dokuments</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;hr&gt;</td><td class="beschreibung">Trennlinie</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;html&gt;</td><td class="beschreibung">Dokumentelement von HTML-Dokumenten, schließt das gesamte Dokument ein</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;i&gt;</td><td class="beschreibung">spezieller Ausdruck im Text, z.B. Fachterminus oder Idiom (üblicherweise kursiv dargestellt)</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;img&gt;</td><td class="beschreibung">Referenzierte und eingebettete Grafik</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;input&gt;</td><td class="beschreibung">Formularelement, verwendbar für diverse Typen wie Eingabefelder, Schaltflächen, Auswahlfelder usw.</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;ins&gt;</td><td class="beschreibung">Eingefügter Inhalt (Änderungsmarkierung)</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;kbd&gt;</td><td class="beschreibung">Darstellung eines über Tastatur einzugebenden Textes im Text</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;label&gt;</td><td class="beschreibung">Beschriftungstext eines Formularfeldes</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;legend&gt;</td><td class="beschreibung">Überschrift für eine fieldset-Gruppe von Elementen in einem Formular</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;li&gt;</td><td class="beschreibung">Listenpunkt in einer ul-, ol- oder menu-Liste</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;link&gt;</td><td class="beschreibung">Logische Beziehungen der aktuellen Webseite zu anderen Webseiten</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;map&gt;</td><td class="beschreibung">Bereich für verweis-sensitive Grafiken</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;meta&gt;</td><td class="beschreibung">Meta-Angabe für nicht im Inhalt sichtbare Dokumentinformationen oder für Anweisungen an den Webserver</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;noscript&gt;</td><td class="beschreibung">Bereich für Inhalte, die angezeigt werden, wenn JavaScript im Browser deaktiviert oder nicht verfügbar ist</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;object&gt;</td><td class="beschreibung">Eingebettetes Objekt, geeignet für spezielle Multimedia-Objekte, Java-Applets usw.</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;ol&gt;</td><td class="beschreibung">Geordnete (z.B. nummerierte) Liste</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;optgroup&gt;</td><td class="beschreibung">Gruppe von Auswahlmöglichkeiten in einer Auswahlliste</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;option&gt;</td><td class="beschreibung">Auswahlmöglichkeit in einer Auswahlliste</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;p&gt;</td><td class="beschreibung">Textabsatz</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;param&gt;</td><td class="beschreibung">Parameter eines Objekts bei object-Element</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;pre&gt;</td><td class="beschreibung">Präformatierter Text (alle Whitespace-Zeichen werden im Browser so dargestellt wie im Text enthalten)</td><td>block</td><td> ✗</td></tr>
+			<tr><td class="tag">&lt;q&gt;</td><td class="beschreibung">Wörtliche Rede in einem Text</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;samp&gt;</td><td class="beschreibung">Beispieltext in einem dokumentierenden Text</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;script&gt;</td><td class="beschreibung">Scriptbereich für JavaScript und andere Scriptsprachen</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;select&gt;</td><td class="beschreibung">Auswahlliste in einem Formular</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;small&gt;</td><td class="beschreibung">kleiner dargestellter Text als Normalschrift</td><td>inline</td><td> ✗</td></tr>
+			<tr><td class="tag">&lt;span&gt;</td><td class="beschreibung">allgemeiner Bereich innerhalb eines Absatzes</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;strong&gt;</td><td class="beschreibung">stark betonter Inhalt im Text</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;style&gt;</td><td class="beschreibung">Bereich für Stylesheet-Definitionen, z.B. in CSS</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;sub&gt;</td><td class="beschreibung">Tiefgestellter Text</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;sup&gt;</td><td class="beschreibung">Hochgestellter Text</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;table&gt;</td><td class="beschreibung">Tabelle</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;tbody&gt;</td><td class="beschreibung">Tabellenkörper mit den eigentlichen Daten</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;td&gt;</td><td class="beschreibung">Tabellenzelle</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;textarea&gt;</td><td class="beschreibung">Mehrzeiliger Eingabebereich in einem Formular</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;tfoot&gt;</td><td class="beschreibung">Fußbereich in einer Tabelle, z.B. für summarische Daten</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;th&gt;</td><td class="beschreibung">Tabellenkopfzelle</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;thead&gt;</td><td class="beschreibung">Kopfbereich einer Tabelle</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;title&gt;</td><td class="beschreibung">Titel eines HTML-Dokuments</td><td>inline</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;tr&gt;</td><td class="beschreibung">Tabellenzeile</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;tt&gt;</td><td class="beschreibung">Fernschreiber-Text.</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;ul&gt;</td><td class="beschreibung">Unsortierte Liste (Aufzählungsliste)</td><td>block</td><td> ✓</td></tr>
+			<tr><td class="tag">&lt;var&gt;</td><td class="beschreibung">Variabler Name in einem dokumentierenden Text</td><td>inline</td><td> ✓</td></tr>
+	  </tbody>
+	</table>
 </body>
 </html>
